--- a/styles/global.css
+++ b/styles/global.css
@@ -229,6 +229,11 @@ table th {
 
 /* Inputs */
 .form-input {
+  /* cancel default browser styles */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
   width: 90%;
   padding: 12px 16px;
   border-radius: 1.125rem;
@@ -245,6 +250,11 @@ table th {
 
 /* Textarea specific */
 .form-textarea-container textarea {
+   /* cancel default browser styles */
+   -webkit-appearance: none;
+   -moz-appearance: none;
+   appearance: none;
+
    display: flex;
    flex-direction: column;
    width: 90%;
