try to cancel the default broser style (in Apple).

--- a/styles/global.css
+++ b/styles/global.css
@@ -240,6 +240,17 @@ table th {
   border: 0.8px solid rgba(58, 58, 54, 0.70);
   margin: 0 auto;
   display: block;
+
+  /* --- cancel the auto background (in Apple) --- */
+  background-color: transparent;
+}
+
+/* --- specific fix for date input on iPhone --- */
+input[type="date"].form-input {
+  min-height: 50px; /* ensure consistent height with other fields */
+  background-color: transparent; /* ensure transparent background */
+  display: flex;
+  align-items: center;
 }
 
 .form-input:focus {
@@ -267,6 +278,9 @@ table th {
    padding: 0.75rem 1rem;
    min-height: 100px;
    box-sizing: border-box;
+
+   /* --- also here cancel background --- */
+   background-color: transparent;
 }
 
 .form-textarea-container textarea:focus {
