--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,9 @@
+/* Remove default blue highlight/active background on tap/click for all elements */
+button, a, input, textarea, select, [tabindex] {
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
+}
+
 @import url("reset.css");
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 
@@ -30,6 +36,12 @@
 
   --font-titles: "Rubik", serif;
   --font-body: "Rubik", serif;
+}
+
+/* Remove default blue highlight/active background on tap/click for all elements */
+button, a, input, textarea, select, [tabindex] {
+  -webkit-tap-highlight-color: transparent;
+  outline: none;
 }
 
 
