--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -80,7 +80,7 @@
   box-sizing: border-box;
   
   background-color: var(--input-background);
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--input-border);
   border-radius: 0.75rem;
   
   /* Font */
@@ -129,7 +129,7 @@ textarea.inputField {
   height: 3.125rem;
   padding: 0 1rem;
   border-radius: 0.75rem;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--input-border);
   background-color: var(--input-background);
   
   font-family: var(--font-body), sans-serif;
@@ -153,7 +153,7 @@ textarea.inputField {
   top: 105%;
   left: 0;
   right: 0;
-  border: 1px solid var(--border-color);
+  border: 1px solid var(--input-border);
   background-color: var(--input-background);
   z-index: 100;
   max-height: 15.625rem;
