--- a/components/Onboarding/Onboarding.module.css
+++ b/components/Onboarding/Onboarding.module.css
@@ -38,6 +38,9 @@
 	position: relative;
 	padding: 20px;
 	background-image: url(/sea-bg.svg);
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .skipButton {
