--- a/components/AnnouncementDisplay/AnnouncementDisplay.module.css
+++ b/components/AnnouncementDisplay/AnnouncementDisplay.module.css
@@ -33,7 +33,7 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
   overflow-y: auto;
   padding: 1.5rem 1rem 1.5rem 2rem;
