--- a/components/buttons/BackButton.module.css
+++ b/components/buttons/BackButton.module.css
@@ -1,14 +1,25 @@
-/* Container for the link */
 .container {
+  background: none;
+  border: none;
+  cursor: pointer;
   display: inline-flex;
   align-items: center;
-  
-  color: var(--text-dark-2); 
+  justify-content: center;
+  transition: opacity 0.2s;
+  text-decoration: none;
+  height: 100%;
 }
 
-/* SVG Icon styling */
+.container:hover {
+  opacity: 0.7;
+}
+
 .icon {
-  width: 2rem;
-  height: 2rem;
-  stroke-width: 1.5;
+  width: 32px;
+  height: 32px;
+  transition: transform 0.2s ease;
+}
+
+.rotate {
+  transform: rotate(180deg);
 }
