--- a/components/AnnouncementDisplay/AnnouncementDisplay.module.css
+++ b/components/AnnouncementDisplay/AnnouncementDisplay.module.css
@@ -27,14 +27,29 @@
   color: var(--text-dark-2);
 }
 
+
 .cardContent {
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
-  text-align: center;
+  justify-content: flex-start;
   overflow-y: auto;
   padding: 24px;
+}
+
+.announcementRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 12px;
+}
+
+.iconWrapper {
+  display: flex;
+  align-items: center;
+  margin-left: 8px;
 }
 
 /* Override MUI's default padding-bottom on the last child */
@@ -45,7 +60,11 @@
 .text {
   white-space: pre-wrap;
   direction: rtl;
-  text-align: center;
+  text-align: right;
   width: 100%;
-  color: var(--color-text-dark);
+  color: #3A3A36;
+  font-family: Rubik;
+  font-size: 1.125rem;
+  font-weight: 500;
+  line-height: 132%; 
 }
