--- a/components/buttons/BackButton.module.css
+++ b/components/buttons/BackButton.module.css
@@ -8,6 +8,7 @@
   transition: opacity 0.2s;
   text-decoration: none;
   height: 100%;
+  padding-top: 0.25rem;
 }
 
 .container:hover {
@@ -15,11 +16,6 @@
 }
 
 .icon {
-  width: 32px;
-  height: 32px;
-  transition: transform 0.2s ease;
-}
-
-.rotate {
-  transform: rotate(180deg);
+  width: 40px;
+  height: 40px;
 }
