designed the activities part in the home page.

--- a/app/admin/components/AdminDashboard.module.css
+++ b/app/admin/components/AdminDashboard.module.css
@@ -12,6 +12,10 @@
   color: var(--text-dark-1);
 }
 
+.title {
+  margin-bottom: 0.4rem;
+}
+
 .adminNavBarWrapper {
   margin: 1.875rem 0;
 }
@@ -23,7 +27,6 @@
 
 .gridContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(21.875rem, 1fr));
   gap: 1.25rem;
 }
 
@@ -32,13 +35,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1.25rem;
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
 }
 
 .activitiesTitle {
   color: var(--text-dark-1);
   text-align: right;
-  gap: 0.5rem;
   margin: 0;
 }
 
@@ -49,7 +52,7 @@
   text-align: center;
 
   background: var(--input-background);
-  padding: 0.5rem 0.9375rem;
+  padding: 0.4rem 0.8rem;
   border-radius: 1.25rem;
   gap: 0.875rem;
   color: var(--text-dark-2);
@@ -60,7 +63,6 @@
 .activitiesList {
   max-height: 18.75rem;
   overflow-y: auto;
-  padding-left: 0.3125rem;
 }
 
 /* --- Empty State --- */
@@ -84,13 +86,14 @@
 
 .requestCard {
   background: var(--light-blue-color);
-  padding: 0 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 1.8125rem;
   backdrop-filter: blur(1.25rem);
   display: flex;
   align-items: center;
   justify-content: space-between;
   transition: transform 0.2s ease;
+  margin-top: 0.75rem;
 }
 
 .requestCard:hover {
