--- a/components/buttons/BackButton.module.css
+++ b/components/buttons/BackButton.module.css
@@ -1,21 +1,32 @@
 .container {
-  background: none;
-  border: none;
-  cursor: pointer;
   display: inline-flex;
-  align-items: center;
   justify-content: center;
-  transition: opacity 0.2s;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  background-color: var(--color-background-light);
+  box-shadow: var(--shadow);
+  cursor: pointer;
   text-decoration: none;
-  height: 100%;
-  padding-top: 0.25rem;
+  transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--text-dark-2);
 }
 
 .container:hover {
-  opacity: 0.7;
+  background-color: var(--color-secondary);
+  transform: translateY(-0.0625rem);
 }
 
-.icon {
-  width: 40px;
-  height: 40px;
+.container:active {
+  transform: scale(0.92);
+  background-color: var(--input-background);
+}
+
+.arrow {
+  transition: transform 0.2s ease;
+}
+
+.rotate {
+  transform: rotate(180deg);
 }
