--- a/styles/global.css
+++ b/styles/global.css
@@ -12,7 +12,7 @@ button, a, input, textarea, select, [tabindex] {
   --text-dark-1: #21211F;
   --text-light: #ffffff;
   --text-dark-2: #3A3A36;
-  --light-blue-color: #B2CACA;
+  --light-blue-color: rgba(175, 207, 207, 0.73);
   --border-color: #405E5E;  
   --shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.04), 0 4px 4px 0 rgba(0, 0, 0, 0.03);
   
