--- a/styles/global.css
+++ b/styles/global.css
@@ -339,9 +339,14 @@ table th {
   display: flex;
 }
 
-/* Toast Custom Styles - for popups */
-.toast-confirm-container {
-  text-align: center;
+
+.toast-unregister-buttons {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: fit-content;
 }
 
 .toast-confirm-message {
@@ -352,6 +357,10 @@ table th {
   display: flex;
   gap: 10px;
   justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: fit-content;
+
 }
 
 .toast-button {
@@ -372,22 +381,37 @@ table th {
   color: #ffffff;
 }
 
-.toast-prompt-container {
+.toast-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   text-align: center;
-  min-width: 250px;
+  margin: 0 auto;
+  text-align: center;
+  height: fit-content;
+  width: 80%;
+  gap: 10px;
 }
 
 .toast-prompt-message {
   margin-bottom: 10px;
+  color: var(--text-dark-1);
+  text-align: center;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 120.804%;
 }
 
 .toast-prompt-input {
   width: 100%;
-  padding: 8px;
   margin-bottom: 10px;
-  border: 1px solid #414141;
-  border-radius: 4px;
   box-sizing: border-box;
+  border-radius: 18px;
+  border: 1px solid #A6AFBC;
+  background: #F7F7F7;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.04), 0 4px 4px 0 rgba(0, 0, 0, 0.03);
+  padding: 13px 18px;
 }
 
 /* button style */
@@ -452,11 +476,30 @@ body:has([data-hide-video-background]) .background-overlay {
   margin-bottom: 1rem;
 }
 
+.toast-unregister-message {
+  color: var(--text-dark-1);
+  line-height: normal;
+  margin-bottom: 10px;
+}
 @media (min-width: 768px) {
   .notificationDropdown {
     width: auto;
     min-width: 320px;
   }
+}
+
+
+.toast-thankyou-icon {
+  width: 32px;
+  height: 32px;
+  display: block;
+  margin: 0 auto 8px auto;
+}
+
+.toast-thankyou-message {
+  margin-bottom: 10px;
+  text-align: center;
+  color: var(--text-dark-1);
 }
 
 .loading-container {
@@ -467,4 +510,25 @@ body:has([data-hide-video-background]) .background-overlay {
   height: 100vh;
   width: 100%;
   z-index: 9999;
+}
+
+.toast-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.20);
+  z-index: 9998;
+}
+
+/* Make sure all toast containers are above the overlay */
+.toast-container {
+  position: relative;
+  z-index: 9999;
+}
+
+.toast-thankyou-btn {
+  display: block;
+  margin: 10px auto 0 auto;
 }
