--- a/components/Badges/Badge.module.css
+++ b/components/Badges/Badge.module.css
@@ -1,5 +1,5 @@
 .badge {
-  display: flex;
+  display: inline-flex;
   padding: 0.3rem 0.9rem;
   justify-content: center;
   align-items: center;
@@ -20,7 +20,7 @@
 
 .blue {
   background-color: var(--light-blue-color);
-  color: var(--text-dark-2);
+  color: var(--border-color);
 }
 
 .white {
