--- a/components/buttons/BackButton.module.css
+++ b/components/buttons/BackButton.module.css
@@ -13,6 +13,16 @@
   color: var(--text-dark-2);
 }
 
+.sizeRight {
+  width: 2.8rem;
+  height: 2.8rem;
+}
+
+.sizeLeft {
+  width: 2.2rem;
+  height: 2.2rem;
+}
+
 .container:hover {
   transform: translateY(-0.0625rem);
 }
@@ -23,6 +33,9 @@
 }
 
 .arrow {
+  width: auto;
+  height: 1rem;
+  display: block;
   transition: transform 0.2s ease;
 }
 
