--- a/components/buttons/Button.module.css
+++ b/components/buttons/Button.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   white-space: nowrap; /* Prevents text wrapping */
   
-  border: none;
+  border: 1px solid;
   cursor: pointer;
   
   border-radius: 2em; 
@@ -42,6 +42,11 @@
 .secondary2 {
   background-color: var(--text-dark-2);
   opacity: 0.7;
+}
+
+.blue {
+  background-color: var(--light-blue-color);
+  border-color: var(--border-color);
 }
 
 /* Interaction States (Active / Disabled) */
