styling to buttons on cards

--- a/app/participants/components/ParticipantsCards.module.css
+++ b/app/participants/components/ParticipantsCards.module.css
@@ -1,3 +1,9 @@
+/* Calendar icon size for button */
+.calendarIcon {
+  width: 32px;
+  height: 32px;
+  display: block;
+}
 /* --- Layout Containers --- */
 .container {
   width: 100%;
